Fixed Top Navigation Bar on Mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -122,6 +122,9 @@ body {
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
+  body{
+    margin-top: 50px;
+  }
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
     position: absolute;
